examples/legacy/invalid_scl/invalid_query_type.scl
rel something = {("a", 1), ("b", 2)}
query something(3, _)
